fix: tighter content view on mobile

--- a/src/components/Code/code.module.scss
+++ b/src/components/Code/code.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   padding-top: main.space(2);
   padding-bottom: main.space(2);
-  margin-top: main.space(1);
+  margin-top: 4px;
   background-color: colors.$cool-gray-90;
   border-radius: 10px;
   color: main.$white;
