--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,7 +9,6 @@ html {
   font-size: 16px;
 
   p {
-    font-size: 17px;
     line-height: 1.47;
   }
 
