--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -214,7 +214,7 @@ $line-height: 1.4211;
 
 @mixin content {
   font-family: $sans;
-  font-size: 17px;
+  font-size: 16px;
 
   @media (min-width: 734px) {
     font-size: 18px;
